examples/stale_proof_link/snapshot/proof-status.txt
error: spec drift for 'constant_time_tag.ct_compare' — registered spec 'Concrete.Proof.ctCompareExpr' (via Concrete.Proof.specs) does not match the source-extracted PExpr; the theorem 'Concrete.Proof.ct_compare_same_tag_correct' is about a different function than the source
=== Proof Status Report ===

-- proof stale -------------------------------------------- examples/stale_proof_link/src/main.con:18

  Function `constant_time_tag.ct_compare` has a registered proof, but the body changed.

 18 |     fn ct_compare(a: [u8; 16], b: [u8; 16]) -> i32 {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

  expected fingerprint:
    [(let diff (int 1)) (let i (int 0)) (while (binop Concrete.BinOp.lt (var i) (int 16)) [(set diff (binop Concrete.BinOp.bitor (var diff) (binop Concrete.BinOp.bitxor (index (var a) (var i)) (index (var b) (var i))))) (set i (binop Concrete.BinOp.add (var i) (int 1)))] [(set i (binop Concrete.BinOp.add (var i) (int 1)))]) (if (binop Concrete.BinOp.eq (var diff) (int 0)) [(ret (int 1))]) (ret (int 0))]

  current fingerprint:
    [(let diff (int 1)) (let i (int 0)) (while (binop Concrete.BinOp.lt (var i) (int 16)) [(set diff (binop Concrete.BinOp.bitor (var diff) (binop Concrete.BinOp.bitxor (index (var a) (var i)) (index (var b) (var i))))) (set i (binop Concrete.BinOp.add (var i) (int 1)))] [(set i (binop Concrete.BinOp.add (var i) (int 1)))]) (if (binop Concrete.BinOp.eq (var diff) (int 0)) [(ret (int 1))]) (ret (int 0))]

  hint: Update the Lean proof in Concrete/Proof.lean, or restore the proved implementation.

-- not eligible ------------------------------------------- examples/stale_proof_link/src/main.con:28

  `main.main` cannot be proved: fails predictable profile (has capabilities: Alloc, Clock, Console, Env, File, Network, Process, Random, is entry point (main), allocation, blocking I/O).

 28 | pub fn main() with(Std) -> Int { return 0; }
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

  reasons: has capabilities: Alloc, Clock, Console, Env, File, Network, Process, Random, is entry point (main), allocation, blocking I/O

  hint: Address these constraints to make this function eligible for proof.

Totals: 2 functions — 0 proved, 1 stale, 0 unproved, 0 blocked, 1 ineligible, 0 trusted

